--- a/com.supermodel3.Supermodel.yaml
+++ b/com.supermodel3.Supermodel.yaml
@@ -2,7 +2,7 @@ id: com.supermodel3.Supermodel
 runtime: org.freedesktop.Platform
 runtime-version: "22.08"
 sdk: org.freedesktop.Sdk
-command: supermodel
+command: supermodel-patch
 separate-locales: false
 finish-args:
   - --device=all
@@ -11,9 +11,8 @@ finish-args:
   - --filesystem=host:ro
   - --share=network
   - --share=ipc
-  - --socket=fallback-x11
   - --socket=pulseaudio
-  - --socket=wayland
+  - --socket=x11
   - --allow=bluetooth
 modules:
   - shared-modules/glu/glu-9.json
@@ -25,6 +24,7 @@ modules:
           -f Makefiles/Makefile.UNIX
           NET_BOARD=1
       - install -Dm 0755 bin/supermodel ${FLATPAK_DEST}/bin/supermodel
+      - install -Dm 0755 supermodel-patch.sh ${FLATPAK_DEST}/bin/supermodel-patch
       - install -Dm 0644 ${FLATPAK_ID}.desktop ${FLATPAK_DEST}/share/applications/${FLATPAK_ID}.desktop
       - install -Dm 0644 ${FLATPAK_ID}.metainfo.xml ${FLATPAK_DEST}/share/metainfo/${FLATPAK_ID}.metainfo.xml
       - install -Dm 0644 supermodel128x128.png ${FLATPAK_DEST}/share/icons/hicolor/128x128/apps/${FLATPAK_ID}.png
@@ -43,3 +43,5 @@ modules:
         path: supermodel128x128.png
       - type: patch
         path: ldflags.patch
+      - type: file
+        path: supermodel-patch.sh
