--- a/com.supermodel3.Supermodel.yaml
+++ b/com.supermodel3.Supermodel.yaml
@@ -11,8 +11,9 @@ finish-args:
   - --filesystem=host:ro
   - --share=network
   - --share=ipc
+  - --socket=fallback-x11
   - --socket=pulseaudio
-  - --socket=x11
+  - --socket=wayland
   - --allow=bluetooth
 modules:
   - shared-modules/glu/glu-9.json
